--- a/ansible/roles/forc_api/tasks/main.yml
+++ b/ansible/roles/forc_api/tasks/main.yml
@@ -6,6 +6,9 @@
 
 - include: "005-packages.yml"
   tags: ['forc_packages']
+  
+- include: "010-config.yml"
+  tags: ['forc_config']
 
 - include: "015-forc.yml"
   tags: ['forc_forc']
